# 404-hunter

./: .gitignore  README.md  pyproject.toml
src/hunter/: cli.py  crawler.py  fetcher.py  normalize.py  parser.py  report.py  soft404.py  state.py
tests/: test_crawler.py  test_normalize.py  test_parser.py
