[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "404-hunter"
version = "0.1.0"
description = "Polite website crawler that finds broken links and saves a report."
requires-python = ">=3.11"
authors = [{ name = "Jan" }]
readme = "README.md"
dependencies = [
    "httpx>=0.27",
    "selectolax>=0.3.21",
    "typer>=0.12",
    "tenacity>=8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-httpx>=0.30",
]

[project.scripts]
hunter = "hunter.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
